<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/organizerProfileLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    >
    <LinearLayout
...
                android:textSize="25sp"/>
            <android.widget.Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/addEventButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Event"/>
        </LinearLayout>
        <TextView
            android:id="@+id/noEventsTextView"
...
            android:layout_height="wrap_content"
            android:text="You do not have any events."
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:visibility="gone"/>
        <com.example.luckydragon.NonScrollListView
            android:id="@+id/organizerProfileEventsListview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>

