<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:expandedHintEnabled="false"
        android:layout_marginTop="10dp"
        android:hint="Name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eventNameEditText"
            android:maxLength="30"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:expandedHintEnabled="false"
        android:layout_marginTop="10dp"
        android:hint="Facility"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/facilityEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:expandedHintEnabled="false"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:hint="Waitlist Limit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/waitlistLimitEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="No Limit"
                android:maxLength="8"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:expandedHintEnabled="false"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:hint="# Attendees"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/attendeeLimitEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="8"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/frame"
        android:paddingVertical="17.5dp"
        android:paddingStart="17.5dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="10dp"
        >
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/uploadPosterText"
            android:text="@string/createEventPosterText"
            android:textSize="16sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingEnd="4dp"
            android:textColor="#000000"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_upload_24"
            android:id="@+id/uploadPosterButton"
            android:background="@null"
            android:padding="2dp"
            app:tint="#CC000000"/>
        <ImageButton
            android:id="@+id/removePosterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_clear_24"
            android:padding="2dp"
            android:background="@null"
            app:tint="#CC000000"/>
    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/geolocation_switch"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="Geolocation"
        android:background="@drawable/frame"
        android:paddingStart="15dp"
        android:paddingVertical="17.5dp"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:background="@drawable/frame"
        android:paddingVertical="17.5dp"
        android:layout_marginTop="10dp"
        android:paddingStart="17.5dp"
        >
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lotteryLabelTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="Lottery:"
            android:textSize="16sp"
            android:textAlignment="viewStart"
            android:textColor="@color/black"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lotteryTimeTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="Draw Time"
            android:textSize="16sp"
            android:textAlignment="viewEnd"
            android:textColor="?attr/colorPrimary"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:textSize="16sp"
            android:layout_marginHorizontal="5dp"
            android:textColor="?attr/colorPrimary"
            android:clickable="false"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lotteryDateTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="Draw Date"
            android:textSize="16sp"
            android:textColor="?attr/colorPrimary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:background="@drawable/frame"
        android:paddingVertical="17.5dp"
        android:layout_marginTop="10dp"
        android:paddingStart="17.5dp"
        >
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/eventLabelTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="Event:"
            android:textSize="16sp"
            android:textAlignment="viewStart"
            android:textColor="@color/black"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/eventTimeTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="Event Time"
            android:textSize="16sp"
            android:textAlignment="viewEnd"
            android:textColor="?attr/colorPrimary"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:textSize="16sp"
            android:layout_marginHorizontal="5dp"
            android:textColor="?attr/colorPrimary"
            android:clickable="false"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/eventDateTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="Event Date"
            android:textSize="16sp"
            android:textColor="?attr/colorPrimary"/>
    </LinearLayout>
</LinearLayout>