...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <TextView
            android:id="@+id/eventRowEventName"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="24sp"
            android:text="Event Name" />
        <TextView
            android:id="@+id/eventRowEventDateTime"
...
